--- a/main.adoc
+++ b/main.adoc
@@ -7,7 +7,7 @@ image::./image/ChezGusteau.jpg[]
 * starter : 
     Soap
 * meal : 
-    Ratatouille
+    Ratatouille maison
 * dessert : 
     Strawberry pie
 
