modification de laura_anglais

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
 # Chez Gusteau website
-Avec la participation de laura ! :)
+with Axel and laura ! :)
 
 link to the website  : https://cantinaassard.netlify.app/
